--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/cropperjs": "0.0.23",
     "core-js": "^2.4.1",
-    "ng2-toastr": "^1.4.1",
+    "cropperjs": "^1.0.0-beta.2",
+    "ng2-toastr": "^1.6.0",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
+    "yashare2": "^1.0.4",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
