--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@types/cropperjs": "0.0.24",
     "core-js": "^2.4.1",
-    "cropperjs": "^1.0.0-beta.2",
     "ng2-toastr": "^1.6.0",
     "ngx-bootstrap": "^1.6.6",
+    "ngx-pagination": "^3.0.0",
     "rxjs": "^5.3.0",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.9"
