--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "ng serve",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "build": "ng build --prod --deploy-url /wp-content/themes/paintball/dist && cd .. && firebase deploy && cd ng-src",
+    "fb": "ng build --prod && cd .. && firebase deploy && cd ng-src"
   },
   "private": true,
   "dependencies": {
