--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "build": "ng build --prod --deploy-url /wp-content/themes/paintball/dist && cd .. && firebase deploy && cd ng-src",
+    "build": "ng build --prod && cd .. && firebase deploy && cd ng-src && ng build --prod --deploy-url /wp-content/themes/paintball/dist ",
     "fb": "ng build --prod && cd .. && firebase deploy && cd ng-src"
   },
   "private": true,
