--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "ng2-awesome-disqus": "^1.1.1",
     "ng2-toastr": "^1.6.0",
     "ngx-bootstrap": "^1.6.6",
+    "ngx-disqus": "^2.1.1",
     "ngx-pagination": "^3.0.0",
     "rxjs": "^5.3.0",
     "ts-helpers": "^1.1.2",
